content/assets/k8s/whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: playground
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: playground
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: whoami-service
  namespace: playground
spec:
  selector:
    app: whoami
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
